# loong-un-arch

./: .coze  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
scripts/: sync-version.cjs
src/: App.vue  main.ts  styles.css  tree.css  vue3-tree-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ExtraceDialog.vue  Greet.vue  Zip.vue
src/utils/: path-to-tree.ts
test/: path-to-tree.test.ts
